<resources>
    <string name="app_name">Biz Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">Rickiey Innovates Global</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_home">Record Sale</string>

    <string name="menu_home">Record Sale</string>
    <string name="menu_view_sales">View Sales</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="record_sale">Record Sale</string>
    <string name="record">Record</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="amount">Amount</string>
    <string name="particulars">Particulars</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="faculty">Faculty</string>
    <string name="select_category">Select Category</string>
    <string name="menu_record_input">Record Input</string>
    <string name="menu_view_input">View Input</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="commodity">Commodity</string>
    <string name="menu_view_account">View Account</string>
    <string name="action_stk_push">STK Push</string>
    <string name="menu_view_commodities">View Commodities</string>
    <string name="enter_commodity_name">Enter commodity name</string>
    <string name="production_cost">Production Cost</string>
    <string name="cancel">Cancel</string>
</resources>