<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/title_size"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_category"
        android:text="@string/faculty"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:autofillHints=""
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:autofillHints=""
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/margin"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_margin="@dimen/margin"/>

</LinearLayout>