<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".ui.RecordSalesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_sale"
                android:textSize="@dimen/title_size"
                android:fontFamily="cursive"
                android:layout_margin="@dimen/margin"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/commodity"

                android:padding="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="18sp"
                android:layout_margin="8dp"

                tools:ignore="LabelFor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/particulars"
                android:padding="10dp"
                android:inputType="textCapWords"
                android:hint="@string/particulars"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="@dimen/margin"
                android:background="@drawable/edit_text_background"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:autofillHints="@string/particulars" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quantity"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:drawablePadding="@dimen/margin"
                android:hint="@string/quantity"
                android:inputType="number"
                android:padding="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:autofillHints="@string/quantity" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unit_price"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:drawablePadding="@dimen/margin"
                android:hint="@string/unit_price"
                android:inputType="number"
                android:padding="10dp"
                android:background="@drawable/edit_text_background"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:autofillHints="@string/unit_price" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/margin">
                    <RadioButton
                        android:id="@+id/cash_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cash" />
                    <RadioButton
                        android:id="@+id/mpesa_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="M-Pesa" />
                </RadioGroup>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/sms_content"
                    android:textSize="11sp"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_record"
                android:text="@string/record"
                android:background="@drawable/button_background"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_sale"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fab_transformation_scrim_behavior" />
</androidx.constraintlayout.widget.ConstraintLayout>